# server-2

./: CMakeLists.txt  README.md  server 2.0.cpp  server 2.0.h  server.cpp  server.h  testFiles.cpp  testFiles.h
headers/: APITaskManager.h  ASSERT.h  GlobalInclude.h
headers/Fabric/: AnswerManager.h  fabric.h  threadSafeFixedQueue.h  worker.h
headers/Memory/: PoolManager.h
headers/TaskContainer/: TaskContainer.h
src/: APITaskManager.cpp  AnswerManager.cpp  GlobalInclude.cpp  PoolManager.cpp  TaskContainer.cpp  fabric.cpp  threadSafeFixedQueue.cpp  worker.cpp
tests/: AADSMonteCarlo.cpp  AADSMonteCarlo.h
